welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:26: error: too many arguments for method gauche: ()Unit
  gauche(2)
        ^